--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -9,7 +9,7 @@
         <h:outputStylesheet library="css" name="estilos.css"/>
         <h:outputScript library="js" name="scripts.js"/>
     </h:head>
-    <h:body style="background-color: #4b4b4b">
+    <h:body style="background-color: #4b4b4b; font-family: sans-serif; color: #dedede;">
         <h:form id="formMenu" prependId="false">
             <p:megaMenu>
                 <p:menuitem value="Início"
